example of JVM parameters